# acl-anthology

./: .ackrc  .codecov.yml  .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruby-gemset  .travis.yml  CHANGELOG.md  Capfile  Gemfile  K17-1003.html  Makefile  README.md  README_detailed.md  Rakefile  codecov.yml  distances.tsv  distances.tsv.bak  extra_pdf.json  files  justfile  list.txt  live_pdf.json  log  logfile  missing_pdf.json  mkdocs.yml  nbsp  pdf  pyproject.toml  test.py
.git-hooks/: autofix  check_commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  ingestion-review-checklist.md  issue-dashboard-config.yml
.yardoc/: checksums  object_types
acl_anthology/: __init__.py  anthology.py  config.py  constants.py  containers.py  exceptions.py  files.py  logging.py  sigs.py  text.py  utils.py  venues.py
benchmarks/: bench_utils.py
bibutils_5.1/: Makefile  Makefile_start  readme.txt
config/: application.rb  database.yml  database.yml.template  deploy.rb  environment.rb  jetty.yml  routes.rb  solr.yml
db/: joint_map.txt  popular_authors.txt  popular_papers.txt  schema.rb  seeds.rb  venues.txt  ws_map.txt
dependabot/: root.agent.md
doc/: ApplicationController.html  ApplicationHelper.html  BlacklightHelper.html  CatalogController.html  Event.html  EventsController.html  EventsHelper.html  Paper.html  PapersController.html  PapersHelper.html  PeopleController.html  PeopleHelper.html  Person.html  Sig.html  SigsController.html  SigsHelper.html  SolrDocument.html  User.html  Venue.html  VenuesController.html  VenuesHelper.html  Volume.html  VolumesController.html  VolumesHelper.html  _index.html  class_list.html  index.html  method_list.html  top-level-namespace.html
docs/: affiliation-extraction-from-pdfs.md  developing.md  index.md
export/: .dump_file
google-cse/: README.md  annotations.xml  cse.xml
hugo/: config.toml
import/: A00.xml  A83.xml  A88.xml  A92.xml  A94.xml  A97.xml  C00.xml  C02.xml  C04.xml  C08.xml  C10.xml  C12.xml  C14.xml  C16.xml  C18.xml  C65.xml  C67.xml  C69.xml  C73.xml  C80.xml  C82.xml  C86.xml  C88.xml  C90.xml  C92.xml  C94.xml  C96.xml  C98.xml  D07.xml  D08.xml  D09.xml  D10.xml  D11.xml  D12.xml  D13.xml  D14.xml  D15.xml  D16.xml  D17.xml  D18.xml  (+306 more)
jetty/: .gitignore  jetty.sh
python/: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.header  Makefile  README.md  inspect.py  justfile  mkdocs.yml  pyproject.toml  repl_with_anthology.py
python/acl_anthology/: __init__.py  anthology.py  config.py  constants.py  containers.py  exceptions.py  files.py  sigs.py  venues.py
python/acl_anthology/collections/: __init__.py  bibkeys.py  collection.py  event.py  eventindex.py  index.py  paper.py  types.py  volume.py
python/acl_anthology/data/: acl.csl  schema.rnc  unimathsymbols.txt
python/acl_anthology/debug/: __main__.py
python/acl_anthology/people/: __init__.py  index.py  name.py  person.py
python/acl_anthology/text/: __init__.py  markuptext.py  stopwords.py  texmath.py
python/acl_anthology/tui/: __init__.py  app.py  author.py  editor.py  editor.tcss
python/acl_anthology/utils/: __init__.py  attrs.py  citation.py  git.py  ids.py  json.py  latex.py  logging.py  text.py  xml.py
python/benchmarks/: bench_attrs.py  bench_sanitycheck.py  bench_utils.py  bench_xml_markup.py  bench_xml_names.py  bench_xml_parsing.py
python/docs/: developing.md  index.md
python/docs/api/: anthology.md  collections.bibkeys.md  collections.collection.md  collections.eventindex.md  collections.index.md  collections.types.md  config.md  constants.md  containers.md  event.md  exceptions.md  files.md  index.md  paper.md  people.index.md  people.md  people.name.md  people.person.md  sigs.md  text.md  utils.attrs.md  utils.citation.md  utils.git.md  utils.ids.md  utils.json.md  utils.latex.md  utils.logging.md  utils.md  utils.text.md  utils.xml.md  venues.md  volume.md
python/docs/contributing/: design.md  indexing.md
python/docs/guide/: accessing-authors.md  accessing-publications.md  getting-started.md  index.md  modifying-data.md  types-of-metadata.md
python/scripts/: name_histogram.py
python/tests/: anthology_integration_test.py  anthology_test.py  conftest.py  containers_test.py  files_test.py  sigs_test.py  venues_test.py
python/tests/collections/: bibkeys_test.py  collection_test.py  collectionindex_test.py  event_test.py  eventindex_test.py  paper_test.py  volume_test.py
python/tests/data/anthology/json/: people.json  sigs.json  venues.json
python/tests/data/anthology/xml/: 1989.cl.xml  2022.acl.xml  2022.naloma.xml  J89.xml  schema.rnc
python/tests/data/anthology/yaml/: name_variants.yaml  people.yaml
python/tests/data/anthology/yaml/sigs/: sigdat.yaml  sigsem.yaml
python/tests/data/anthology/yaml/venues/: acl.yaml  nlma.yaml  ws.yaml
python/tests/people/: name_test.py  person_test.py  personindex_test.py
python/tests/text/: markuptext_test.py  stopwords_test.py  texmath_test.py
python/tests/toy_anthology/: README.md
python/tests/toy_anthology/xml/: 2022.acl.xml  2022.naloma.xml  2022.ws.xml  J89.xml  L06.xml  schema.rnc
python/tests/toy_anthology/yaml/: name_variants.yaml
python/tests/toy_anthology/yaml/venues/: cl.yaml  lrec.yaml
python/tests/utils/: attrs_test.py  ids_test.py  latex_test.py  logging_test.py  text_test.py  xml_test.py
scripts/: correction_batch_generator.py  fix_von.py  metadata_diff_visualizer.py  normalize_metadata.py  patch_signer.py  validate_anthology_yaml.py  verify_patch_cli.py
stats/: dashboard_stats_2026-02-01.csv  dashboard_stats_2026-03-01.csv  dashboard_stats_2026-04-01.csv  dashboard_stats_2026-05-01.csv  summary_stats_2026-02-01.txt  summary_stats_2026-03-01.txt  summary_stats_2026-04-01.txt  summary_stats_2026-05-01.txt
test/: test_indent.py
tests/: anthology_integration_test.py  anthology_test.py  conftest.py  containers_test.py  files_test.py  sigs_test.py  test_add_dois.py  test_create_hugo_data.py  test_extract_pdf_metadata.py  test_generate_crossref_doi_metadata.py  test_geocode_affiliations.py  (+5 more)
(+3115 files in other folders)
