[project]
name = "acl-anthology"
version = "1.0.0"
description = "A library for accessing the ACL Anthology"
authors = [{ name = "Marcel Bollmann", email = "marcel@bollmann.me" }]
requires-python = ">=3.10, !=3.11.0, <3.15"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "docopt (>=0.6.2)",
    "lxml (>=6.0.2,<7.0.0)",
    "PyYAML (~=6.0)",
    "app-paths (~=0.0.7)",
    "diskcache (>=5.6.1)",
    "rich (>=13.3.5)",
    "attrs",
    "texsoup (>=0.3.1, <0.4.0)",
    "omegaconf (~=2.3.0)",
    "python-slugify[unidecode] (~=8.0.1)",
    "numpy (>=1.26.0)",
    "scipy (>=1.6.0)",
    "platformdirs",
    "gitpython (>=3.1.37)",
    "rnc2rng (>=2.6.6)",
    "citeproc-py (~=0.9.0)",
    "langcodes[data] (>=3.5.0)",
    "pylatexenc (~=2.10)",
    "stop-words (==2018.7.23)",
    "typing-extensions (>=4.6.0) ; python_version < '3.11'",
    "requests>=2.32.5",
]
documentation = "https://acl-anthology.readthedocs.io/"
packages = [{ include = "acl_anthology" }]
repository = "https://github.com/acl-org/acl-anthology"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
    "ruff>=0.14.14,<0.15",
    "pre-commit>=4.5.1,<5",
    "mkdocs>=1.6.1,<2",
    "mkdocstrings-python>=2.0.1,<3",
    "mkdocs-material>=9.7.1,<10",
    "mypy>=1.19.1,<2",
    "types-python-slugify>=8.0.2.20240310,<9",
    "types-pyyaml>=6.0.12.20250915,<7",
    "types-lxml>=2026.1.1",
    "pymdown-extensions>=10.20.1,<11",
    "pytest-datadir>=1.8.0,<2",
    "types-requests>=2.32.4.20260107",
    "responses>=0.25.8",
]
profiling = [
    "memray>=1.19.1; sys_platform != 'win32'",
    "richbench",
]

[tool.mypy]
strict = true

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = "acl_anthology"
module-root = ""

[tool.uv.sources]
richbench = { git = "https://github.com/tonybaloney/rich-bench.git" }

[[tool.mypy.overrides]]
module = 'TexSoup.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'pylatexenc.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'stop_words.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'citeproc.*'
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests on the full acl-org/acl-anthology repo"
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore:invalid escape sequence:SyntaxWarning"
]

[tool.ruff]
line-length = 90
target-version = 'py310'
